docs: update CHANGELOG for version 3.0.0